--- a/main/input.css
+++ b/main/input.css
@@ -15,7 +15,7 @@
     @apply underline decoration-dotted ;
 }
 .para-cn{
-    @apply p-2 text-2xl leading-9 sm:text-lg tracking-wider text-[#444];
+    @apply p-2 text-2xl leading-9 sm:text-base sm:leading-5  sm:max-w-[300px] sm:pl-5 sm:m-auto tracking-wider text-[#444];
 }
 .para-en{
     @apply p-2 text-xl leading-9 italic sm:not-italic;
@@ -41,11 +41,14 @@
 .bottom-link-social{
     @apply text-gray-200 bottom-link text-base hover:text-white pr-1
 }
+.bottom-link-friend{
+    @apply text-gray-200  text-base pr-1 mr-[-15px]
+}
 .bottom-link-contact{
     @apply text-gray-200 bottom-link text-sm hover:text-white
 }
 table{
-    @apply border-collapse sm:text-sm
+    @apply border-collapse sm:text-sm 
 }
 th{
     @apply text-gray-400 p-2 w-20 sm:p-1
@@ -74,4 +77,16 @@ td{
 }
 .learned-info{
     @apply text-xs text-[#888] 
+}
+.more-basis{
+    @apply basis-1/3  m-5
+}
+.more-pic{
+    @apply rounded-lg border border-gray-200 shadow-md hover:scale-[1.01] duration-300 hover:shadow-lg sm:w-[200px] m-auto
+}
+.more-info{
+    @apply text-[#888] p-2 pt-0 pb-4 text-center
+}
+.more-title{
+    @apply text-xl p-2 pb-1 text-center
 }
