--- a/main/output_main.css
+++ b/main/output_main.css
@@ -586,6 +586,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
 .mb-\[100px\] {
   margin-bottom: 100px;
 }
@@ -600,14 +604,6 @@ video {
 
 .ml-4 {
   margin-left: 1rem;
-}
-
-.ml-\[-2px\] {
-  margin-left: -2px;
-}
-
-.ml-\[-4px\] {
-  margin-left: -4px;
 }
 
 .ml-\[100px\] {
@@ -626,16 +622,8 @@ video {
   margin-right: -2px;
 }
 
-.mr-\[-4px\] {
-  margin-right: -4px;
-}
-
-.mr-\[-8px\] {
-  margin-right: -8px;
-}
-
-.mr-\[5\%\] {
-  margin-right: 5%;
+.mt-14 {
+  margin-top: 3.5rem;
 }
 
 .mt-2 {
@@ -652,10 +640,6 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
 }
 
 .mt-\[-20px\] {
@@ -678,30 +662,6 @@ video {
   margin-top: 70px;
 }
 
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
-.mb-32 {
-  margin-bottom: 8rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mb-\[2000px\] {
-  margin-bottom: 2000px;
-}
-
-.mb-24 {
-  margin-bottom: 6rem;
-}
-
-.mt-24 {
-  margin-top: 6rem;
-}
-
 .inline {
   display: inline;
 }
@@ -716,6 +676,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-24 {
+  height: 6rem;
 }
 
 .h-40 {
@@ -734,8 +698,8 @@ video {
   height: 200px;
 }
 
-.h-\[250px\] {
-  height: 250px;
+.h-\[600px\] {
+  height: 600px;
 }
 
 .h-\[80px\] {
@@ -759,14 +723,6 @@ video {
   height: 100vh;
 }
 
-.min-h-\[150px\] {
-  min-height: 150px;
-}
-
-.min-h-screen {
-  min-height: 100vh;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -783,20 +739,12 @@ video {
   width: 2rem;
 }
 
-.w-\[30\%\] {
-  width: 30%;
-}
-
 .w-\[300px\] {
   width: 300px;
 }
 
 .w-\[50px\] {
   width: 50px;
-}
-
-.w-\[60\%\] {
-  width: 60%;
 }
 
 .w-\[70px\] {
@@ -848,6 +796,10 @@ video {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -876,6 +828,10 @@ video {
   overflow: hidden;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-xl {
   border-radius: 0.75rem;
 }
@@ -894,9 +850,18 @@ video {
   border-width: 1px;
 }
 
+.border-2 {
+  border-width: 2px;
+}
+
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -1005,10 +970,6 @@ video {
   padding-top: 6rem;
 }
 
-.pt-5 {
-  padding-top: 1.25rem;
-}
-
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -1019,10 +980,6 @@ video {
 
 .pt-\[200px\] {
   padding-top: 200px;
-}
-
-.pt-32 {
-  padding-top: 8rem;
 }
 
 .text-center {
@@ -1202,8 +1159,11 @@ video {
 
 @media (max-width: 999px) {
   .para-cn {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+    margin: auto;
+    max-width: 300px;
+    padding-left: 1.25rem;
+    font-size: 1rem;
+    line-height: 1.25rem;
   }
 }
 
@@ -1308,6 +1268,15 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.bottom-link-friend {
+  margin-right: -15px;
+  padding-right: 0.25rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .bottom-link-contact {
@@ -1459,6 +1428,55 @@ td {
   color: rgb(136 136 136 / var(--tw-text-opacity));
 }
 
+.more-basis {
+  margin: 1.25rem;
+  flex-basis: 33.333333%;
+}
+
+.more-pic {
+  margin: auto;
+  border-radius: 0.5rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  transition-duration: 300ms;
+}
+
+.more-pic:hover {
+  --tw-scale-x: 1.01;
+  --tw-scale-y: 1.01;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+@media (max-width: 999px) {
+  .more-pic {
+    width: 200px;
+  }
+}
+
+.more-info {
+  padding: 0.5rem;
+  padding-top: 0px;
+  padding-bottom: 1rem;
+  text-align: center;
+  --tw-text-opacity: 1;
+  color: rgb(136 136 136 / var(--tw-text-opacity));
+}
+
+.more-title {
+  padding: 0.5rem;
+  padding-bottom: 0.25rem;
+  text-align: center;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .hover\:bg-purple-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(147 51 234 / var(--tw-bg-opacity));
@@ -1481,6 +1499,18 @@ td {
     margin-right: 1rem;
   }
 
+  .sm\:mt-\[100px\] {
+    margin-top: 100px;
+  }
+
+  .sm\:mt-\[50px\] {
+    margin-top: 50px;
+  }
+
+  .sm\:mt-\[20px\] {
+    margin-top: 20px;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -1493,21 +1523,13 @@ td {
     display: none;
   }
 
-  .sm\:h-\[300px\] {
-    height: 300px;
+  .sm\:h-\[900px\] {
+    height: 900px;
   }
 
   .sm\:h-fit {
     height: -moz-fit-content;
     height: fit-content;
-  }
-
-  .sm\:w-\[20\%\] {
-    width: 20%;
-  }
-
-  .sm\:w-\[75\%\] {
-    width: 75%;
   }
 
   .sm\:w-full {
@@ -1516,6 +1538,10 @@ td {
 
   .sm\:max-w-\[100\%\] {
     max-width: 100%;
+  }
+
+  .sm\:max-w-\[300px\] {
+    max-width: 300px;
   }
 
   .sm\:grid-cols-none {
@@ -1583,30 +1609,50 @@ td {
 }
 
 @media (min-width: 1000px) and (max-width: 1200px) {
+  .md\:flex {
+    display: flex;
+  }
+
   .md\:grid {
     display: grid;
   }
 }
 
 @media (min-width: 1200px) and (max-width: 1279px) {
+  .lg\:flex {
+    display: flex;
+  }
+
   .lg\:grid {
     display: grid;
   }
 }
 
 @media (min-width: 1280px) and (max-width: 1600px) {
+  .xl\:flex {
+    display: flex;
+  }
+
   .xl\:grid {
     display: grid;
   }
 }
 
 @media (min-width: 1600px) and (max-width: 2240px) {
+  .\32xl\:flex {
+    display: flex;
+  }
+
   .\32xl\:grid {
     display: grid;
   }
 }
 
 @media (min-width: 2240px) {
+  .\33xl\:flex {
+    display: flex;
+  }
+
   .\33xl\:grid {
     display: grid;
   }
