--- a/main/input.css
+++ b/main/input.css
@@ -3,19 +3,19 @@
 @tailwind utilities;
 
 .contact-text{
-    @apply underline decoration-dashed hover:bg-purple-400 hover:text-white duration-300
+    @apply underline decoration-dashed hover:bg-gray-400 hover:text-white duration-300
 }
 .lang{
     @apply text-purple-500 hover:bg-purple-400 hover:text-white duration-200
 }
 .link{
-    @apply text-purple-500 underline decoration-dotted hover:bg-purple-500 p-[1px]  hover:text-white duration-300;
+    @apply text-black  hover:bg-black p-[1px]  hover:text-white duration-300 ;
 }
 .link_sm{
     @apply underline decoration-dotted ;
 }
 .para-cn{
-    @apply p-2 text-2xl leading-9 sm:text-base sm:leading-5  sm:max-w-[300px] sm:pl-5 sm:m-auto tracking-wider text-[#444];
+    @apply p-2 text-2xl leading-9 sm:text-base sm:leading-5  sm:max-w-[300px] sm:pl-5 sm:m-auto tracking-wider text-[#444] font-light;
 }
 .para-en{
     @apply p-2 text-xl leading-9 italic sm:not-italic;
@@ -51,13 +51,13 @@ table{
     @apply border-collapse sm:text-sm 
 }
 th{
-    @apply text-gray-400 p-2 w-20 sm:p-1
+    @apply text-gray-400 p-2 w-20 sm:p-1 font-medium
 }
 tr{
     @apply h-10 pt-20 border-gray-200 border-b-[1px] last:border-none
 }
 td{
-    @apply text-[#888] text-center w-20 
+    @apply text-gray-400 text-center w-20 
 }
 .learned{
     @apply mb-5 sm:mb-3 bg-gradient-to-tr from-[#f9fafb] border border-[#e5e7eb] rounded-xl h-16 w-[90%] m-auto hover:from-[#f9fafb] hover:to-[#f3f4f6] shadow-sm
