--- a/main/output_main.css
+++ b/main/output_main.css
@@ -1109,7 +1109,7 @@ video {
 
 .contact-text:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(192 132 252 / var(--tw-bg-opacity));
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -1130,15 +1130,13 @@ video {
 .link {
   padding: 1px;
   --tw-text-opacity: 1;
-  color: rgb(168 85 247 / var(--tw-text-opacity));
-  text-decoration-line: underline;
-  text-decoration-style: dotted;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
   transition-duration: 300ms;
 }
 
 .link:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -1151,6 +1149,7 @@ video {
 .para-cn {
   padding: 0.5rem;
   font-size: 1.5rem;
+  font-weight: 300;
   line-height: 2.25rem;
   letter-spacing: 0.05em;
   --tw-text-opacity: 1;
@@ -1308,6 +1307,7 @@ table {
 th {
   width: 5rem;
   padding: 0.5rem;
+  font-weight: 500;
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
@@ -1334,7 +1334,7 @@ td {
   width: 5rem;
   text-align: center;
   --tw-text-opacity: 1;
-  color: rgb(136 136 136 / var(--tw-text-opacity));
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .learned {
@@ -1493,18 +1493,6 @@ td {
 
   .sm\:mb-4 {
     margin-bottom: 1rem;
-  }
-
-  .sm\:mr-4 {
-    margin-right: 1rem;
-  }
-
-  .sm\:mt-\[100px\] {
-    margin-top: 100px;
-  }
-
-  .sm\:mt-\[50px\] {
-    margin-top: 50px;
   }
 
   .sm\:mt-\[20px\] {
