--- a/main/output_main.css
+++ b/main/output_main.css
@@ -554,6 +554,14 @@ video {
   top: 2.5rem;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
+.z-\[-1\] {
+  z-index: -1;
+}
+
 .float-right {
   float: right;
 }
@@ -564,10 +572,6 @@ video {
 
 .m-10 {
   margin: 2.5rem;
-}
-
-.m-2 {
-  margin: 0.5rem;
 }
 
 .m-auto {
@@ -592,6 +596,10 @@ video {
 
 .mb-\[100px\] {
   margin-bottom: 100px;
+}
+
+.mb-\[50px\] {
+  margin-bottom: 50px;
 }
 
 .ml-2 {
@@ -622,8 +630,8 @@ video {
   margin-right: -2px;
 }
 
-.mt-14 {
-  margin-top: 3.5rem;
+.mr-\[50px\] {
+  margin-right: 50px;
 }
 
 .mt-2 {
@@ -638,8 +646,8 @@ video {
   margin-top: 1rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
+.mt-\[-200px\] {
+  margin-top: -200px;
 }
 
 .mt-\[-20px\] {
@@ -658,10 +666,6 @@ video {
   margin-top: 2px;
 }
 
-.mt-\[70px\] {
-  margin-top: 70px;
-}
-
 .inline {
   display: inline;
 }
@@ -670,16 +674,8 @@ video {
   display: flex;
 }
 
-.table {
-  display: table;
-}
-
 .hidden {
   display: none;
-}
-
-.h-24 {
-  height: 6rem;
 }
 
 .h-40 {
@@ -696,10 +692,6 @@ video {
 
 .h-\[200px\] {
   height: 200px;
-}
-
-.h-\[600px\] {
-  height: 600px;
 }
 
 .h-\[80px\] {
@@ -751,14 +743,6 @@ video {
   width: 70px;
 }
 
-.w-\[95\%\] {
-  width: 95%;
-}
-
-.w-auto {
-  width: auto;
-}
-
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -772,10 +756,6 @@ video {
   max-width: 1024px;
 }
 
-.max-w-\[640px\] {
-  max-width: 640px;
-}
-
 .max-w-\[720px\] {
   max-width: 720px;
 }
@@ -786,10 +766,6 @@ video {
 
 .flex-none {
   flex: none;
-}
-
-.table-auto {
-  table-layout: auto;
 }
 
 .grid-cols-4 {
@@ -832,10 +808,6 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .rounded-b-\[50\%\] {
   border-bottom-right-radius: 50%;
   border-bottom-left-radius: 50%;
@@ -846,17 +818,8 @@ video {
   border-top-right-radius: 50%;
 }
 
-.border {
-  border-width: 1px;
-}
-
 .border-2 {
   border-width: 2px;
-}
-
-.border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .border-white {
@@ -869,13 +832,8 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-opacity-50 {
-  --tw-bg-opacity: 0.5;
+.bg-opacity-90 {
+  --tw-bg-opacity: 0.9;
 }
 
 .bg-gradient-to-b {
@@ -898,9 +856,19 @@ video {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
+.bg-gradient-to-tr {
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+}
+
 .from-\[\#d94217\] {
   --tw-gradient-from: #d94217 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(217 66 23 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#ffffff00\] {
+  --tw-gradient-from: #ffffff00 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -921,9 +889,18 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), #a91d04 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
+.via-\[\#b0b0b057\] {
+  --tw-gradient-to: rgb(176 176 176 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #b0b0b057 var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
 .via-white {
   --tw-gradient-to: rgb(255 255 255 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), #fff var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.to-\[\#3e3e3e5d\] {
+  --tw-gradient-to: #3e3e3e5d var(--tw-gradient-to-position);
 }
 
 .to-\[\#861103\] {
@@ -946,12 +923,24 @@ video {
   padding: 1.25rem;
 }
 
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
 .pl-1 {
   padding-left: 0.25rem;
 }
 
 .pl-10 {
   padding-left: 2.5rem;
+}
+
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
+.pl-7 {
+  padding-left: 1.75rem;
 }
 
 .pl-\[50px\] {
@@ -970,6 +959,10 @@ video {
   padding-top: 6rem;
 }
 
+.pt-5 {
+  padding-top: 1.25rem;
+}
+
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -980,6 +973,14 @@ video {
 
 .pt-\[200px\] {
   padding-top: 200px;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -1002,6 +1003,11 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-6xl {
@@ -1033,6 +1039,14 @@ video {
   font-weight: 700;
 }
 
+.font-extrabold {
+  font-weight: 800;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
 .leading-8 {
   line-height: 2rem;
 }
@@ -1049,6 +1063,11 @@ video {
 .text-\[\#888\] {
   --tw-text-opacity: 1;
   color: rgb(136 136 136 / var(--tw-text-opacity));
+}
+
+.text-\[\#9f9c95\] {
+  --tw-text-opacity: 1;
+  color: rgb(159 156 149 / var(--tw-text-opacity));
 }
 
 .text-\[\#e4e4e4\] {
@@ -1086,14 +1105,34 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+.text-\[\#686661\] {
+  --tw-text-opacity: 1;
+  color: rgb(104 102 97 / var(--tw-text-opacity));
+}
+
+.text-\[\#4f4d4a\] {
+  --tw-text-opacity: 1;
+  color: rgb(79 77 74 / var(--tw-text-opacity));
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.drop-shadow-\[0_0_6px_rgba\(5\2c 116\2c 228\2c 0\.2\)\] {
-  --tw-drop-shadow: drop-shadow(0 0 6px rgba(5,116,228,0.2));
+.drop-shadow-md {
+  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.drop-shadow-lg {
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.drop-shadow-2xl {
+  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -1495,8 +1534,8 @@ td {
     margin-bottom: 1rem;
   }
 
-  .sm\:mt-\[20px\] {
-    margin-top: 20px;
+  .sm\:mr-\[20px\] {
+    margin-right: 20px;
   }
 
   .sm\:block {
@@ -1511,25 +1550,13 @@ td {
     display: none;
   }
 
-  .sm\:h-\[900px\] {
-    height: 900px;
-  }
-
   .sm\:h-fit {
     height: -moz-fit-content;
     height: fit-content;
   }
 
-  .sm\:w-full {
-    width: 100%;
-  }
-
   .sm\:max-w-\[100\%\] {
     max-width: 100%;
-  }
-
-  .sm\:max-w-\[300px\] {
-    max-width: 300px;
   }
 
   .sm\:grid-cols-none {
@@ -1564,12 +1591,16 @@ td {
     padding-top: 200px;
   }
 
-  .sm\:text-left {
-    text-align: left;
+  .sm\:pl-14 {
+    padding-left: 3.5rem;
   }
 
-  .sm\:text-center {
-    text-align: center;
+  .sm\:pl-12 {
+    padding-left: 3rem;
+  }
+
+  .sm\:text-left {
+    text-align: left;
   }
 
   .sm\:text-2xl {
